@@ -12,7 +12,7 @@ James Riechel
 Stefan Morrell
     The patch for Apprentices/revamping Lacandon Conquest
 Karl Castle
-	Implementation of alternate army route methods.
+	Implementation of alternate army rout methods.
 Jon Bagshaw
     Working with Stefan on Lacandon Conquest
 Tom Alsen (aka Tzarg)
@@ -35,9 +35,10 @@ Paul Mehrer
 Stephen Baillie
     Submitted a patch to allow units passing through a region (but not
       stopping) to generate a partial, slightly innacurate hex report.
-    Pointed out bugs in the easier underworld code and the improved
-      farsight code.
+    Pointed out bugs in the easier underworld code, the improved
+      farsight code and other places.
 	Implemented multiple taxation options controlling who could tax.
+	Implemented skill improvement through practise code.
 Nick Hoggard
     Implementation of the EXCHANGE order.
 	Implementation of the TURN order which allows pre-doing turn orders as
