@@ -106,6 +106,7 @@ ARegion * Game::Do1SailOrder(ARegion * reg,Object * ship,Unit * cap)
 		wgt += unit->Weight();
 		if (unit->monthorders && unit->monthorders->type == O_SAIL) {
 			slr += unit->GetSkill(S_SAILING) * unit->GetMen();
+			unit->Practise(S_SAILING);
 		}
 
         // XXX - sheesh... gotta do something about this.
@@ -116,6 +117,7 @@ ARegion * Game::Do1SailOrder(ARegion * reg,Object * ship,Unit * cap)
 					movepoints = Globals->SHIP_SPEED + 2;
 					unit->Event("Casts Summon Wind to aid the ship's "
 								"progress.");
+					unit->Practise(S_SUMMON_WIND);
 					break;
 				case O_CLIPPER:
 				case O_BALLOON:
@@ -123,6 +125,7 @@ ARegion * Game::Do1SailOrder(ARegion * reg,Object * ship,Unit * cap)
 						movepoints = Globals->SHIP_SPEED + 2;
 						unit->Event("Casts Summon Wind to aid the ship's "
 									"progress.");
+						unit->Practise(S_SUMMON_WIND);
 					}
 					break;
 				default:
@@ -130,6 +133,7 @@ ARegion * Game::Do1SailOrder(ARegion * reg,Object * ship,Unit * cap)
 						movepoints = Globals->SHIP_SPEED + 2;
 						unit->Event("Casts Summon Wind to aid the ship's "
 									"progress.");
+						unit->Practise(S_SUMMON_WIND);
 					}
 					break;
 			}
@@ -346,6 +350,8 @@ void Game::Do1TeachOrder(ARegion * reg,Unit * unit)
             }
             unit->Event(AString("Teaches ") + SkillDefs[o->skill].name +
                         " to " + *u->name + ".");
+			// The TEACHER may learn something in this process!
+			unit->Practise(o->skill);
         }
     }
 }
@@ -470,6 +476,7 @@ void Game::Run1BuildOrder(ARegion * r,Object * obj,Unit * u)
 
     // AS
     u->Event(AString("Performs") + job + "on " + *(obj->name) + ".");
+	u->Practise(sk);
 
     delete u->monthorders;
     u->monthorders = 0;
@@ -596,6 +603,7 @@ void Game::RunUnitProduce(ARegion * r,Unit * u)
     u->items.SetNum(o->item,u->items.GetNum(o->item) + output);
     u->Event(AString("Produces ") + ItemString(o->item,output) + " in " +
 			r->ShortPrint( &regions ) + ".");
+	u->Practise(o->skill);
     delete u->monthorders;
     u->monthorders = 0;
 }
@@ -744,6 +752,9 @@ void Game::RunAProduction(ARegion * r,Production * p)
                              + " silver entertaining in " +
                              r->ShortPrint( &regions )
                              + ".");
+					// If they don't have PHEN, then this will fail safely
+					u->Practise(S_PHANTASMAL_ENTERTAINMENT);
+					u->Practise(S_ENTERTAINMENT);
                 }
             }
             else
@@ -751,6 +762,7 @@ void Game::RunAProduction(ARegion * r,Production * p)
                 /* Everything else */
                 u->Event(AString("Produces ") + ItemString(po->item,ubucks) +
                          " in " + r->ShortPrint( &regions ) + ".");
+				u->Practise(po->skill);
             }
             delete u->monthorders;
             u->monthorders = 0;
